--- a/app/src/main/assets/code-editor.html
+++ b/app/src/main/assets/code-editor.html
@@ -3,36 +3,44 @@
 <head>
     <title>ACE in Action</title>
     <style type="text/css" media="screen">
+    body {
+        background: transparent;
+    }
     #editor {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
+        <!--position: absolute;-->
+        <!--top:0;-->
+        <!--bottom:0-->
+        <!--left:10px;-->
+        <!--right: 10px;-->
+        padding: 0px 10px;
+        min-width: 200px;
+        min-height: 200px;
     }
 </style>
 </head>
 <body>
 
-<!--<div id="editor">function foo(items) {-->
-    <!--var x = "All this is syntax highlighted";-->
-    <!--return x;-->
-    <!--}</div>-->
+<div id="editor"></div>
 
-<!--<script type="text/javascript" src="js/ace/src-min/ace.js"/>-->
-
-<input type="button" value="Say hello" onClick="showAndroidToast('Hello Android!')" />
+<script type="text/javascript" src="js/ace/src-min/ace.js"/>
 
 <script type="text/javascript">
-    function showAndroidToast(toast) {
-        Android.showToast(toast);
+    window.onerror = function (message, url, lineNo){
+        console.log('Error: ' + message + '\n' + 'Line Number: ' + lineNo);
+        return true;
     }
 </script>
 
 <script>
-    var editor = ace.edit("editor");
-    editor.setTheme("ace/theme/monokai");
-    editor.getSession().setMode("ace/mode/javascript");
+    var editor, session;
+        editor = ace.edit("editor");
+        editor.setTheme("ace/theme/monokai");
+
+        session = editor.session
+        session.setNewLineMode("unix")
+        session.setMode("ace/mode/java");
+
+        editor.setValue(Task.getContent());
 </script>
 </body>
 </html>
